# wn

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  collacations.txt  comments.txt  noxfile.py  pyproject.toml  requirements-dev.txt  wn_test.py
.github/ISSUE_TEMPLATE/: bug_report.md  data-issue.md
.github/workflows/: checks.yml  deploy-docs.yml  publish.yml  release.yml
bench/: README.md  conftest.py  test_bench.py
docs/: .readthedocs.yaml  cli.rst  conf.py  faq.rst  index.rst  requirements.txt  setup.rst
docs/_static/: demo.ipynb
docs/_static/css/: svg.css
docs/api/: wn.compat.rst  wn.compat.sensekey.rst  wn.constants.rst  wn.ic.rst  wn.ili.rst  wn.lmf.rst  wn.morphy.rst  wn.project.rst  wn.rst  wn.similarity.rst  wn.taxonomy.rst  wn.util.rst  wn.validate.rst  wn.web.rst
docs/guides/: basic.rst  cli.rst  interlingual.rst  lemmatization.rst  lexicons.rst  nltk-migration.rst  setup.rst  wordnet.rst
tests/: _config_test.py  _util_test.py  compat_sensekey_test.py  conftest.py  db_test.py  export_test.py  ic_test.py  ili_test.py  lmf_relations_test.py  lmf_test.py  morphy_test.py  paths_test.py  primary_query_test.py  project_test.py  relations_test.py  secondary_query_test.py  similarity_test.py  taxonomy_test.py  util_test.py  validate_test.py  web_test.py  wndb_test.py  wordnet_test.py
tests/data/: E101-0.xml  E101-1.xml  E101-2.xml  E101-3.xml  README.md  W305-0.xml  W306-0.xml  W307-0.xml  mini-ili-with-status.tsv  mini-ili.tsv  mini-lmf-1.0.xml  mini-lmf-1.1.xml  mini-lmf-1.3.xml  mini-lmf-1.4.xml  sense-key-variations.xml  sense-key-variations2.xml  sense-member-order.xml
tests/data/test-package/: LICENSE  citation.bib  test-wn.xml
wn/: __init__.py  __main__.py  _add.py  _api.py  _config.py  _core.py  _db.py  _download.py  _exceptions.py  _export.py  _ili.py  _lexicon.py  _meta.py  _metadata.py  _models.py  _module_functions.py  _projects.py  _queries.py  _store.py  _types.py  _util.py  _wordnet.py  constants.py  ic.py  ili.py  index.toml  lmf.py  metrics.py  morphy.py  project.py  schema.sql  similarity.py  taxonomy.py  util.py  validate.py  web.py  wndb.py  wordnet.py
wn/compat/: sensekey.py
