[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
dynamic = ['version']

name = "wn"
description = "Wordnet interface library"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["wordnet", "interlingual", "linguistics", "language", "library"]
authors = [
  {name = "Michael Wayne Goodman", email = "goodman.m.w@gmail.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Linguistic",
]

dependencies = [
  "requests",
  "tomli",
  "typing-extensions; python_version < '3.8'",
]

[project.optional-dependencies]
web = [
    "starlette",
]
test = [
    "pytest",
    "mypy",
    "flake8",
    "nox",
    # typing stubs
    'types-requests',
]
doc = [
    "sphinx",
    "furo",
    "sphinx-copybutton",
]
editor = [
    "wn-editor"
]

[project.urls]
homepage = "https://github.com/goodmami/wn"
documentation = "https://wn.readthedocs.io"
changelog = "https://github.com/goodmami/wn/blob/main/CHANGELOG.md"
