[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ['version']

name = "wn"
description = "Wordnet interface library"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["wordnet", "interlingual", "linguistics", "language", "library"]
authors = [
  {name = "Michael Wayne Goodman", email = "goodman.m.w@gmail.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Linguistic",
]

dependencies = [
  "httpx",
  "tomli",
]

[project.optional-dependencies]
web = [
  "starlette",
]
editor = [
  "wn-editor"
]

[project.urls]
homepage = "https://github.com/goodmami/wn"
documentation = "https://wn.readthedocs.io"
changelog = "https://github.com/goodmami/wn/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "wn/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]

[tool.hatch.envs.mypy]
dependencies = [
  "mypy",
]

[tool.hatch.envs.mypy.scripts]
check = "mypy wn/"

[tool.hatch.envs.docs]
dependencies = [
  "wn[web]",
  "furo",
  "sphinx",
  "sphinx-copybutton",
]

[tool.hatch.envs.docs.scripts]
build = "make -C docs html"
clean = "make -C docs clean"

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
  "B",      # flake8-bugbear
  "C90",    # McCabe cyclomatic complexity
  "E",      # pycodestyle
  "F",      # Pyflakes
  "W",      # pycodestyle
]

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["E402"]

[tool.ruff.format]
quote-style = "single"
