[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ['version']

name = "wn"
description = "Wordnet interface library"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["wordnet", "interlingual", "linguistics", "language", "library"]
authors = [
  {name = "Michael Wayne Goodman", email = "goodman.m.w@gmail.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Linguistic",
]

dependencies = [
  "httpx",
  "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
editor = [
  "wn-editor"
]

[project.urls]
homepage = "https://github.com/goodmami/wn"
documentation = "https://wn.readthedocs.io"
changelog = "https://github.com/goodmami/wn/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "wn/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]

[tool.hatch.envs.hatch-test]
extra-dependencies = [
  "pytest-benchmark",
]

[tool.hatch.envs.mypy]
dependencies = [
  "mypy",
]

[tool.hatch.envs.mypy.scripts]
check = "mypy wn/"

[tool.hatch.envs.types]
dependencies = [
  "wn[dev]",
  "ty",
]

[tool.hatch.envs.types.scripts]
check = "ty check {args:wn/}"

[tool.hatch.envs.docs]
dependencies = [
  "wn",
  "furo",
  "sphinx",
  "sphinx-copybutton",
  "sphinx-autobuild",
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -M html docs docs/_build"
clean = "sphinx-build -M clean docs docs/_build"
watch = "sphinx-autobuild docs docs/_build/html"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
  "B",      # flake8-bugbear
  "C4",     # comprehensions
  "C90",    # McCabe cyclomatic complexity
  "E",      # pycodestyle
  "F",      # Pyflakes
  "I",      # isort
  "LOG",    # logging
  "PT",     # pytest style
  "RUF",    # ruff-specific fixes
  "SIM",    # simplifications
  "TC",     # type checking
  "UP",     # newer python features
  "W",      # pycodestyle
]
